Define specification for admin routes
