# app/Http/Controllers/Api/Admin/AdminCommentController.php
@@ -22,6 +22,16 @@ class AdminCommentController extends Controller
     }
 
     /**
+     * @OA\Get (
+     *     tags={"Comments"},
+     *     path="/api/admin/posts/{postId}/comments/{commentId}",
+     *     operationId="GetCommentForAdmin",
+     *     tags={"Comments"},
+     *     summary="Get Comment For Admin",
+     *     description="Get Comment For Admin",
+     *     security={{"bearerAuth":{ }}},
+     *     @OA\Response(response="200", description="Show", @OA\JsonContent())
+     * )
      * @param string $postId
      * @param string $id
      * @return JsonResponse
@@ -34,6 +44,16 @@ class AdminCommentController extends Controller
     }
 
     /**
+     * @OA\Delete (
+     *     tags={"Comments"},
+     *     path="/api/admin/posts/{postId}/comments/{commentId}",
+     *     operationId="DeleteCommentByAdmin",
+     *     tags={"Comments"},
+     *     summary="Delete Comment By Admin",
+     *     description="Delete Comment By Admin",
+     *     security={{"bearerAuth":{ }}},
+     *     @OA\Response(response="204", description="Delete", @OA\JsonContent())
+     * )
      * @param string $postId
      * @param string $id
      * @return JsonResponse
@@ -46,6 +66,16 @@ class AdminCommentController extends Controller
     }
 
     /**
+     * @OA\Post  (
+     *     tags={"Comments"},
+     *     path="/api/admin/posts/{postId}/comments/{commentId}/restore",
+     *     operationId="RestoreCommentByAdmin",
+     *     tags={"Comments"},
+     *     summary="Restore Comment By Admin",
+     *     description="Restore Comment By Admin",
+     *     security={{"bearerAuth":{ }}},
+     *     @OA\Response(response="200", description="Restore", @OA\JsonContent())
+     * )
      * @param string $postId
      * @param string $id
      * @return JsonResponse
@@ -54,6 +84,6 @@ class AdminCommentController extends Controller
     {
       $this->repository->restore($postId, $id);
 
-      return response()->json([], Response::HTTP_NO_CONTENT);
+      return response()->json([], Response::HTTP_OK);
     }
 }
