# app/Http/Controllers/Api/Admin/AdminPostController.php
@@ -22,6 +22,16 @@ class AdminPostController extends Controller
     }
 
     /**
+     * @OA\Get (
+     *     tags={"Posts"},
+     *     path="/api/admin/posts/{postId}",
+     *     operationId="GetPostForAdmin",
+     *     tags={"Posts"},
+     *     summary="Get Post For Admin",
+     *     description="Get Post For Admin",
+     *     security={{"bearerAuth":{ }}},
+     *     @OA\Response(response="200", description="Show", @OA\JsonContent())
+     * )
      * @param string $id
      * @return JsonResponse
      */
@@ -33,24 +43,44 @@ class AdminPostController extends Controller
     }
 
     /**
-     * @param string $postId
+     * @OA\Delete (
+     *     tags={"Posts"},
+     *     path="/api/admin/posts/{postId}",
+     *     operationId="DeletePostByAdmin",
+     *     tags={"Posts"},
+     *     summary="Delete Post By Admin",
+     *     description="Delete Post By Admin",
+     *     security={{"bearerAuth":{ }}},
+     *     @OA\Response(response="204", description="Delete", @OA\JsonContent())
+     * )
+     * @param string $id
      * @return JsonResponse
      */
-    public function delete(string $postId): JsonResponse
+    public function delete(string $id): JsonResponse
     {
-      $this->repository->delete($postId);
+      $this->repository->delete($id);
 
       return response()->json([], Response::HTTP_NO_CONTENT);
     }
 
     /**
-     * @param string $postId
+     * @OA\Post  (
+     *     tags={"Posts"},
+     *     path="/api/admin/posts/{postId}/restore",
+     *     operationId="RestorePostByAdmin",
+     *     tags={"Posts"},
+     *     summary="Restore Post By Admin",
+     *     description="Restore Post By Admin",
+     *     security={{"bearerAuth":{ }}},
+     *     @OA\Response(response="200", description="Restore", @OA\JsonContent())
+     * )
+     * @param string $id
      * @return JsonResponse
      */
-    public function restore(string $postId): JsonResponse
+    public function restore(string $id): JsonResponse
     {
-      $this->repository->restore($postId);
+      $this->repository->restore($id);
 
-      return response()->json([], Response::HTTP_NO_CONTENT);
+      return response()->json([], Response::HTTP_OK);
     }
 }
